--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,199 +12,10 @@
 	</head>
 	<body>
 
-	<!--start: Header -->
-<header>
-        <!--start: Container -->
-        <div class="container">
-                <!--start: Navbar -->
-                <div class="navbar navbar-inverse">
-                    <div class="navbar-inner">
-                          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                          </a>
-                                <%= link_to image_tag("simpl-logo.png", alt: 'startupplace'), root_path %>
-                          <div class="nav-collapse collapse">
-                            <ul class="nav">
-                            <li class="active">
-                            	<%= link_to 'Inicio', root_path %>
-                            </li>
-                            </ul>
-                          </div>
-                </div>
-              </div>
-                <!--end: Navbar -->
-        </div>
-        <!--end: Container-->                        
-</header>
-<!--end: Header-->
 
-
+	<%= render 'layouts/header' %>
 	<%= yield %>
-<!-- start: Footer Menu -->
-<div id="footer-menu" class="hidden-tablet hidden-phone">
-        <!-- start: Container -->
-        <div class="container">
-                <!-- start: Row -->
-                <div class="row">
-                        <!-- start: Footer Menu Logo -->
-                        <div class="span2">
-                                <div id="footer-menu-logo">
-                                        <%= image_tag("logotype-foot.png", alt: 'startupplace') %>
-                                </div>
-                        </div>
-                        <!-- end: Footer Menu Logo -->
-
-                        <!-- start: Footer Menu Links-->
-                        <div class="span9">
-                                <div id="footer-menu-links">
-                                        <ul id="footer-nav">
-                                                <li>
-                                                <%= link_to "About", '#' %>
-                                                </li>
-                                                <li>
-                                                <%= link_to "Contact", '#' %>
-                                                </li>
-                                        </ul>
-                                </div>
-                        </div>
-                        <!-- end: Footer Menu Links-->
-
-                        <!-- start: Footer Menu Back To Top -->
-                        <div class="span1">
-                                <div id="footer-menu-back-to-top">
-                                        <a href="#"></a>
-                                </div>
-                        </div>
-                        <!-- end: Footer Menu Back To Top -->
-                </div>
-                <!-- end: Row -->
-        </div>
-        <!-- end: Container  -->        
-</div>        
-<!-- end: Footer Menu -->
-
-<!-- start: Footer -->
-<div id="footer">
-        <!-- start: Container -->
-        <div class="container">
-                <!-- start: Row -->
-                <div class="row">
-                        <!-- start: About -->
-                        <div class="span3">
-                                <h3>StartupPlace</h3>
-                                <p>
-                                        Somos la primera comunidad universitaria de emprendedores e innovadores en internet.
-                                </p>
-                        </div>
-                        <!-- end: About -->
-
-                        <!-- start: location map -->
-                        <div class="span3">
-                                <h3>Estamos aqu&iacute;</h3>
-                                <div id="small-map-container"><a href="<?php echo URL::base(); ?>contact"></a></div>
-                                <iframe id="small-map" width="210" height="210" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0" src="https://maps.google.es/maps?f=q&source=s_q&hl=es-419&geocode=&q=Universidad+Nacional+Mayor+de+San+Marcos,+Lima,+Per%C3%BA&aq=0&oq=Universidad+Nacional+Ma&sll=40.396764,-3.713379&sspn=9.75133,20.280762&ie=UTF8&hq=Universidad+Nacional+Mayor+de+San+Marcos,+Lima,+Per%C3%BA&ll=-12.056451,-77.083828&spn=0.010135,0.009152&z=14&iwloc=near&output=embed"></iframe>
-                        </div>
-                        <!-- end: location map  -->
-
-                        <div class="span6">
-                                <!-- start: Follow Us -->
-                                <h3>S&iacute;guemos</h3>
-                                <ul class="social-grid">
-                                        <li>
-                                                <div class="social-item">                                
-                                                        <div class="social-info-wrap">
-                                                                <div class="social-info">
-                                                                        <div class="social-info-front social-facebook">
-                                                                                <a href="https://www.facebook.com/StartupPlace" target="_blank"></a>
-                                                                        </div>
-                                                                        <div class="social-info-back social-facebook-hover">
-                                                                                <a href="https://www.facebook.com/StartupPlace" target="_blank"></a>
-                                                                        </div>
-                                                                </div>
-                                                        </div>
-                                                </div>
-                                        </li>
-                                        <li>
-                                                <div class="social-item">                                
-                                                        <div class="social-info-wrap">
-                                                                <div class="social-info">
-                                                                        <div class="social-info-front social-twitter">
-                                                                                <a href="https://twitter.com/StartupPlace" target="_blank"></a>
-                                                                        </div>
-                                                                        <div class="social-info-back social-twitter-hover">
-                                                                                <a href="https://twitter.com/StartupPlace" target="_blank"></a>
-                                                                        </div>        
-                                                                </div>
-                                                        </div>
-                                                </div>
-                                        </li>
-                                        <li>
-                                                <div class="social-item">                                
-                                                        <div class="social-info-wrap">
-                                                                <div class="social-info">
-                                                                        <div class="social-info-front social-youtube">
-                                                                                <a href="https://www.youtube.com/startupplace" target="_blank"></a>
-                                                                        </div>
-                                                                        <div class="social-info-back social-youtube-hover">
-                                                                                <a href="https://www.youtube.com/startupplace" target="_blank"></a>
-                                                                        </div>        
-                                                                </div>
-                                                        </div>
-                                                </div>
-                                        </li>
-                                        <li>
-                                                <div class="social-item">                                
-                                                        <div class="social-info-wrap">
-                                                                <div class="social-info">
-                                                                        <div class="social-info-front social-vimeo">
-                                                                                <a href="http://vimeo.com/user15785241" target="_blank"></a>
-                                                                        </div>
-                                                                        <div class="social-info-back social-vimeo-hover">
-                                                                                <a href="http://vimeo.com/user15785241" target="_blank"></a>
-                                                                        </div>        
-                                                                </div>
-                                                        </div>
-                                                </div>
-                                        </li>
-                                </ul>
-                                <!-- end: Follow Us -->
-                        
-                                <!-- start: Newsletter >
-                                <form id="newsletter">
-                                        <h3>Suscr&iacute;bete</h3>
-                                        <p>D&eacute;janos tu correo electr&oacute;nico para mantenerte informado.</p>
-                                        <label for="newsletter_input">@:</label>
-                                        <input type="text" id="newsletter_input"/>
-                                        <input type="submit" id="newsletter_submit" value="Listo">
-                                </form>
-                                <! end: Newsletter -->
-                        </div>
-                </div>
-                <!-- end: Row -->        
-        </div>
-        <!-- end: Container  -->
-</div>
-<!-- end: Footer -->
-
-<!-- start: Copyright -->
-<div id="copyright">
-
-        <!-- start: Container -->
-        <div class="container">
-
-                <div class="span12">
-                        <p>
-                                &copy; 2013, StartupPlace
-                        </p>
-                </div>
-
-        </div>
-        <!-- end: Container  -->
-
-</div>        
-<!-- end: Copyright -->
+	<%= render 'layouts/footer' %>
 
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
