--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,30 @@
-	<!--start: Header -->
+<!--start: Header -->
 <header>
-        <!--start: Container -->
-        <div class="container">
-                <!--start: Navbar -->
-                <div class="navbar navbar-inverse">
-                    <div class="navbar-inner">
-                          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                          </a>
-                                <%= link_to image_tag("simpl-logo.png", alt: 'startupplace'), root_path %>
-                          <div class="nav-collapse collapse">
-                            <ul class="nav">
-                            <li class="active">
-                            	<%= link_to 'Inicio', root_path %>
-                            </li>
-                            </ul>
-                          </div>
+    <!--start: Container -->
+    <div class="container">
+        <!--start: Navbar -->
+        <div class="navbar navbar-inverse">
+            <div class="navbar-inner">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <%= link_to image_tag("simpl-logo.png", alt: 'startupplace'), root_path, class: 'brand' %>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li class="active">
+                        	<%= nav_link 'Inicio', root_path %>
+                        </li>
+                        <li>
+                            <%= nav_link 'About', about_path %>
+                        </li>
+                    </ul>
                 </div>
-              </div>
-                <!--end: Navbar -->
         </div>
-        <!--end: Container-->                        
+      </div>
+        <!--end: Navbar -->
+    </div>
+    <!--end: Container-->                        
 </header>
 <!--end: Header-->
