build ideastartup page and setting favicon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 		<link type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" media="screen">
 		<link type="text/css" href="http://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet" media="screen">
 		<link type="text/css" href="http://fonts.googleapis.com/css?family=Economica:700,400italic" rel="stylesheet" media="screen">
+		<%= favicon_link_tag 'ico/favicon.ico', type: 'image/x-icon' %>
 		<%= csrf_meta_tags %>
 		<%= render 'layouts/shim' %>
 	</head>
