--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
                     <ul class="nav">
                     	<%= nav_link 'Inicio', root_path %>
                         <%= nav_link 'About', about_path %>
+                        <%= nav_link 'ideaStartup', ideastartup_path %>
                     </ul>
                 </div>
         </div>
