build contact page, redefine labels on menu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,9 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                     	<%= nav_link 'Inicio', root_path %>
-                        <%= nav_link 'About', about_path %>
+                        <%= nav_link 'Sobre nosotros', about_path %>
                         <%= nav_link 'ideaStartup', ideastartup_path %>
+                        <%= nav_link 'Contact', contact_path %>
                     </ul>
                 </div>
         </div>
