--- a/app/views/dashboard/news/new.html.erb
+++ b/app/views/dashboard/news/new.html.erb
@@ -1,20 +1,3 @@
 <h1>Create a new news</h1>
 
-<%= form_for @news, url: dashboard_news_index_path do |f| %>
-	<ul>
-		<% @news.errors.full_messages.each do |error| %>
-			<i><%=error%></i>
-		<% end %>
-	</ul>
-	<p>
-		<%= f.label :title %><br/>
-		<%= f.text_field :title %>
-	</p>
-	<p>
-		<%= f.label :body %><br/>
-		<%= f.text_field :body %>
-	</p>
-	<p>
-		<%= f.submit %>
-	</p>
-<% end %>
+<%= render partial: 'form', locals: { url_into: dashboard_news_index_path} %>
