--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Dashboard - StartupPlace</title>
   <%= stylesheet_link_tag    "dashboard/dashboard", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "dashboard/dashboard", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
