show news list feature

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <%= nav_link 'Inicio', root_path %>
-                    	<%= nav_link 'Noticias', news_index_path %>
+                    	<%= nav_link 'News', news_index_path %>
                         <%= nav_link 'ideaStartup', ideastartup_path %>
                         <%= nav_link 'Sobre nosotros', about_path %>
                         <%= nav_link 'Contact', contact_path %>
