--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,1 +1,51 @@
-<h1>news list</h1>
+	<!-- start: Page Title -->
+	<div id="page-title">
+		<div id="page-title-inner">
+			<!-- start: Container -->
+			<div class="container">
+				<h2><i class="ico-pencil ico-white"></i>News</h2>
+			</div><!-- end: Container  -->
+		</div>	
+	</div>
+	<!-- end: Page Title -->
+				
+	<!--start: Wrapper-->
+	<div id="wrapper">
+		<!--start: Container -->
+    	<div class="container">
+			<!--start: Row -->
+			<div class="row">
+				<div class="span8 offset2">
+					<% if @news.each do |news| %>
+						<!-- start: Post -->
+						<div class="post">
+							<div class="post-img picture">
+							<%= image_tag("fakecover.jpg", alt: 'fakecover') %>
+							</div>
+							<span class="post-icon standard"><i class="ico-pen circle"></i></span>
+							<div class="post-content">
+								<div class="post-title"><h2><a href="#"><%= news.title  %></a></h2></div>
+								<div class="post-description">
+									<p>
+										<%= news.body %>
+									</p>
+								</div>
+								<div class="post-meta">
+									<span><i class="mini-ico-calendar"></i><%= news.created_at%></span> 
+									<span>
+										<i class="mini-ico-user"></i>
+										By <a href="#">user</a>
+									</span> 
+								</div>
+							</div>
+						</div><!-- end: Post -->
+					<% end.empty? %>
+ 						<p>Sin noticias por el momento :(</p>
+					<% end %>
+				</div>
+			</div>
+		</div>
+		<!--end: Container-->
+	
+	</div>
+	<!-- end: Wrapper  -->	
