--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,2 +1,46 @@
-<h1>News#show</h1>
-<p>Find me in app/views/news/show.html.erb</p>
+<!-- start: Page Title -->
+<div id="page-title">
+	<div id="page-title-inner">
+		<!-- start: Container -->
+		<div class="container">
+			<h2><i class="ico-pencil ico-white"></i><%= @news.title  %></h2>
+		</div>
+		<!-- end: Container  -->
+	</div>	
+</div>
+<!-- end: Page Title -->
+			
+<!--start: Wrapper-->
+<div id="wrapper">
+	<!--start: Container -->
+	<div class="container">
+		<!--start: Row -->
+		<div class="row">
+			<div class="span8 offset2">
+				<!-- start: Post -->
+				<div class="post post-page">
+					<div class="post-img picture">
+						<%= image_tag("fakecover.jpg", alt: 'fakecover') %>
+					</div>
+					<div class="post-content">
+						<div class="post-description">
+							<p>
+								<%= @news.body %>
+							</p>
+						</div>
+						<div class="post-meta">
+							<span><i class="mini-ico-calendar"></i><%= @news.created_at %></span>
+							<span><i class="mini-ico-user"></i>By <a href="#">user </a></span>
+						</div>
+					</div>
+				
+				</div>
+				<!-- end: Post -->
+				
+				<div class="clear"></div>
+			</div>	
+		
+	</div>
+	<!--end: Container-->
+</div>
+<!-- end: Wrapper  -->	
