manage thumb images with paperclip feature completed

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -20,7 +20,7 @@
 					<!-- start: Post -->
 					<div class="post">
 						<div class="post-img picture">
-						<%= image_tag("fakecover.jpg", alt: 'fakecover') %>
+							<%= image_tag news.image.url(:medium)%>
 						</div>
 						<span class="post-icon standard"><i class="ico-pen circle"></i></span>
 						<div class="post-content">
