--- a/app/views/dashboard/news/_form.html.erb
+++ b/app/views/dashboard/news/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @news, url: url_into do |f| %>
+<%= form_for @news, html: {multipart: true}, url: url_into do |f| %>
 	<ul>
 		<% @news.errors.full_messages.each do |error| %>
 			<i><%=error%></i>
@@ -15,6 +15,13 @@
 	<p>
 	  <%= f.label :tag_list %><br />
 	  <%= f.text_field :tag_list %>
+	</p>
+	<p>
+		<% if @news.image.exists? %>
+		  <%= image_tag @news.image.url(:thumb) %><br/>
+		<% end %>
+		<%= f.label :image, "Attach a New Image" %><br />
+		<%= f.file_field :image %>
 	</p>
 	<p>
 		<%= f.submit %>
