ckeditor is added for publishers

--- a/app/views/dashboard/news/_form.html.erb
+++ b/app/views/dashboard/news/_form.html.erb
@@ -10,7 +10,7 @@
 	</p>
 	<p>
 		<%= f.label :body %><br/>
-		<%= f.text_field :body %>
+		<%= f.cktext_area :body, rows: 10 %>
 	</p>
 	<p>
 	  <%= f.label :tag_list %><br />
