--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -25,11 +25,11 @@
 						<span class="post-icon standard"><i class="ico-pen circle"></i></span>
 						<div class="post-content">
 							<div class="post-title">
-								<h2><%= link_to news.title, news_path(news), id: 'news_#{news.id}' %></h2>
+								<h2><%= link_to news.title.html_safe, news_path(news), id: 'news_#{news.id}' %></h2>
 							</div>
 							<div class="post-description">
 								<p>
-									<%= news.body %>
+									<%= news.body.html_safe %>
 								</p>
 							</div>
 							<div class="post-meta">
