--- a/app/views/dashboard/news/index.html.erb
+++ b/app/views/dashboard/news/index.html.erb
@@ -2,7 +2,7 @@
  <ul>
  	<% if @news.each do |news| %>
  		<li>
- 			<%= link_to news.title, dashboard_news_path(news), class: 'newsItem', id: 'news_#{news_id}' %>
+ 			<%= link_to news.title.html_safe, dashboard_news_path(news), class: 'newsItem', id: 'news_#{news_id}' %>
  		</li>
  	<% end.empty? %>
  		<p>Sin resultados :(</p>
