--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -7,6 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div id="account">
+	  <% if current_user %>
+	    <span>Welcome, <%= current_user.email %></span>
+	    <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+	  <% else %>
+	    <%= link_to "Sign in", new_user_session_path %>
+	  <% end %>
+	</div>
 	<%= yield %>
 	<p class="flash"><%= flash.notice %></p>
 </body>
