--- a/app/assets/stylesheets/app/events.css.scss
+++ b/app/assets/stylesheets/app/events.css.scss
@@ -94,6 +94,6 @@ ul.event_post {
 }
 
 .star_list_event li {
-  background: url(../img/icons/list/blue/list_star.png) no-repeat 0% 10%;
+  background: image-url("icons/list/blue/list_star.png") no-repeat 0% 10%;
   padding: 0 0 0 16px;
 }
