--- a/app/assets/stylesheets/app/forms.css.scss
+++ b/app/assets/stylesheets/app/forms.css.scss
@@ -90,7 +90,7 @@ form#newsletter {
 }
 
 .loading {
-  background: url(../images/loader.gif) no-repeat 1px;
+  background: image-url("loader.gif") no-repeat 1px;
   height: 28px;
   width: 28px;
   float: left;
