--- a/app/assets/stylesheets/app/news.css.scss
+++ b/app/assets/stylesheets/app/news.css.scss
@@ -51,7 +51,7 @@ div.newsletter div.item-description {
 		ul { margin-left: 15px; }
 		ol { margin-left: 38px; }
 		ul li {
-			background: url("../icons/list/blue/list_plus.png") no-repeat 0 5px;
+			background: image-url("icons/list/blue/list_plus.png") no-repeat 0 5px;
 			padding: 0 0 0 18px;
 		}
 	}
