--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title><%= yield(:title) %></title>
-		<%= stylesheet_link_tag  "app/application", media: "all", "data-turbolinks-track" => true %>
+		<%= stylesheet_link_tag  "app", media: "all", "data-turbolinks-track" => true %>
 		<link type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" media="screen">
 		<link type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" media="screen">
 		<link type="text/css" href="http://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet" media="screen">
