--- a/app/assets/stylesheets/app/links.css.scss
+++ b/app/assets/stylesheets/app/links.css.scss
@@ -7,7 +7,7 @@
   display: block;
   padding: 3px 0;
   padding-left: 12px;
-  background: url(../links-list-arrow-01.png) no-repeat left 47%;
+  background: image-url("links-list-arrow-01.png") no-repeat left 47%;
 }
 
 .links-list-alt li a {
@@ -15,7 +15,7 @@
   display: block;
   padding: 3px 0;
   padding-left: 12px;
-  background: url(../links-list-arrow-02.png) no-repeat left 47%;
+  background: image-url("links-list-arrow-02.png") no-repeat left 47%;
 }
 
 .links-list li a:hover {
