--- a/app/assets/stylesheets/app/lists.css.scss
+++ b/app/assets/stylesheets/app/lists.css.scss
@@ -34,41 +34,41 @@ ol {
 }
 
 .check_list li {
-  background: url(../icons/list/blue/list_check.png) no-repeat 0% 50%;
+  background: image-url("icons/list/blue/list_check.png") no-repeat 0% 50%;
   padding: 0 0 0 18px;
 }
 
 .plus_list li {
-  background: url(../icons/list/blue/list_plus.png) no-repeat 0% 50%;
+  background: image-url("icons/list/blue/list_plus.png") no-repeat 0% 50%;
   padding: 0 0 0 18px;
 }
 
 .minus_list li {
-  background: url(../icons/list/blue/list_minus.png) no-repeat 0% 50%;
+  background: image-url("icons/list/blue/list_minus.png") no-repeat 0% 50%;
   padding: 0 0 0 18px;
 }
 
 .star_list li {
-  background: url(../icons/list/blue/list_star.png) no-repeat 0% 50%;
+  background: image-url("icons/list/blue/list_star.png") no-repeat 0% 50%;
   padding: 0 0 0 16px;
 }
 
 .arrow_list li {
-  background: url(../icons/list/blue/list_arrow.png) no-repeat 0% 50%;
+  background: image-url("icons/list/blue/list_arrow.png") no-repeat 0% 50%;
   padding: 0 0 0 16px;
 }
 
 .square_list li {
-  background: url(../icons/list/blue/list_square.png) no-repeat 0% 50%;
+  background: image-url("icons/list/blue/list_square.png") no-repeat 0% 50%;
   padding: 0 0 0 16px;
 }
 
 .circle_list li {
-  background: url(../icons/list/blue/list_circle.png) no-repeat 0% 50%;
+  background: image-url("icons/list/blue/list_circle.png") no-repeat 0% 50%;
   padding: 0 0 0 16px;
 }
 
 .cross_list li {
-  background: url(../icons/list/blue/list_cross.png) no-repeat 0% 50%;
+  background: image-url("icons/list/blue/list_cross.png") no-repeat 0% 50%;
   padding: 0 0 0 16px;
 }
