validate news fields

--- a/app/views/dashboard/news/show.html.erb
+++ b/app/views/dashboard/news/show.html.erb
@@ -1,7 +1,8 @@
 <h1><%= @news.title.html_safe %></h1>
 
-<p><%= image_tag @news.image.url(:thumb)%></p>
-<p><%= image_tag @news.image.url(:square)%></p>
+<% if @news.image.exists? %>
+	<p><%= image_tag @news.image.url(:thumb)%></p>
+<% end %>
 
 <p><%= @news.body.html_safe %></p>
 
