--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -19,9 +19,11 @@
 				<% if @news.each do |news| %>
 					<!-- start: Post -->
 					<div class="post">
-						<div class="post-img picture">
-							<%= image_tag news.image.url(:medium)%>
-						</div>
+						<% if news.image.exists? %>
+							<div class="post-img picture">
+								<%= image_tag news.image.url(:medium)%>
+							</div>
+						<% end %>
 						<span class="post-icon standard"><i class="ico-pen circle"></i></span>
 						<div class="post-content">
 							<div class="post-title">
