--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,3 +1,9 @@
+<% meta :title => "Historias tecnológicas",
+    :description => "Las historias y noticias más tocadas en el mundo del emprendimiento, actualidad sobre el mundo de las Startups.",
+    :keywords => %w(artículos tecnología startups noticias blog),
+    :author => "geoom"
+%>
+
 <!-- start: Page Title -->
 <div id="page-title">
 	<div id="page-title-inner">
@@ -8,7 +14,7 @@
 	</div>	
 </div>
 <!-- end: Page Title -->
-			
+
 <!--start: Wrapper-->
 <div id="wrapper">
 	<!--start: Container -->
