--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,8 @@
-<% provide(:title, 'About') %>
+<% meta :title => "Sobre nosotros",
+    :description => "Conoce quiénes están detrás de esta iniciativa y el porqué.",
+    :keywords => %w(about nosotros),
+    :author => "geoom"
+%>	
 
 <!-- start: Page Title -->
 <div id="page-title">
