--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,9 @@
-<% provide(:title, 'Home') %>
+<% meta :title => "StartupPlace: Comunidad universitaria de emprendedores e innovadores en internet",
+    :description => "En StartupPlace te guiamos en la busca del éxito como emprendedor. Atrévete a innovar e iniciar la aventura como emprendedor.",
+    :keywords => %w(startupplace, startup, sp),
+    :author => "geoom"
+%>  
+
 
 <div id="wrapper">
     <div class="container">
