--- a/app/views/static_pages/ideastartup.html.erb
+++ b/app/views/static_pages/ideastartup.html.erb
@@ -1,4 +1,9 @@
-<% provide(:title, 'ideaStartup') %>
+<%
+  meta_title "ideaStartup"
+  meta_keywords "ideaStartup, taller"
+  meta_description "Programa de desarrollo para emprendedores tecnológicos de StartupPlace"
+  meta_author "geoom"
+%>
 
 <!-- start: Page Title -->
 <div id="page-title">
