--- a/app/views/dashboard/news/edit.html.erb
+++ b/app/views/dashboard/news/edit.html.erb
@@ -1,3 +1,5 @@
+ <% meta :title => "Editar #{@news.title}" %>
+
 <h1>Edit an News</h1>
 
 <%= render partial: 'form', locals: { url_into: dashboard_news_path(@news) } %>
