--- a/app/views/dashboard/news/new.html.erb
+++ b/app/views/dashboard/news/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Create a new news</h1>
+ <% meta :title => "Nuevo artículo" %>
 
 <%= render partial: 'form', locals: { url_into: dashboard_news_index_path} %>
