--- a/app/views/dashboard/users/edit.html.erb
+++ b/app/views/dashboard/users/edit.html.erb
@@ -1,3 +1,5 @@
+ <% meta :title => "Editar #{@user.username}" %>
+
 <h1>Edit an User</h1>
 
 <%= form_for @user, url: dashboard_user_path, method: :put do |f| %>
