--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 	<head>
-		<title><%= yield(:title) %></title>
+		<%= render 'shared/meta_tags' %>
 		<%= stylesheet_link_tag  "app", media: "all", "data-turbolinks-track" => true %>
 		<link type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" media="screen">
 		<link type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" media="screen">
