--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,9 +1,15 @@
+<% meta :title => "#{@tag.name}",
+    :description => "Artículos relacionados con #{@tag.name}.",
+    :keywords => %w(tag #{@tag.name}),
+    :author => "geoom"
+%>
+
 <!-- start: Page Title -->
 <div id="page-title">
 	<div id="page-title-inner">
 		<!-- start: Container -->
 		<div class="container">
-			<h2><i class="ico-pencil ico-white"></i>News Tagged with <%= @tag.name %></h2>
+			<h2><i class="ico-pencil ico-white"></i>Art&iacuet;culos relacionados con <%= @tag.name %></h2>
 		</div><!-- end: Container  -->
 	</div>	
 </div><!-- end: Page Title -->
