--- a/app/views/dashboard/news/edit.html.erb
+++ b/app/views/dashboard/news/edit.html.erb
@@ -1,4 +1,4 @@
- <% meta :title => "Editar #{@news.title}" %>
+ <% meta :title => "Editar #{@news.title}", :robots => "noindex" %>
 
 <h1>Edit an News</h1>
 
