--- a/app/views/dashboard/news/index.html.erb
+++ b/app/views/dashboard/news/index.html.erb
@@ -1,4 +1,4 @@
- <% meta :title => "Artículos publicados" %>
+ <% meta :title => "Artículos publicados", :robots => "noindex" %>
 
  <h1>All news</h1>
  <ul>
