--- a/app/views/dashboard/news/show.html.erb
+++ b/app/views/dashboard/news/show.html.erb
@@ -1,4 +1,4 @@
- <% meta :title => "Ver #{@news.title}" %>
+ <% meta :title => "Ver #{@news.title}", :robots => "noindex" %>
 
 <h1><%= @news.title.html_safe %></h1>
 
