--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,7 +2,29 @@
     :description => "Conoce quiénes están detrás de esta iniciativa y el porqué.",
     :keywords => %w(about nosotros),
     :author => "geoom"
-%>	
+%>
+
+<!-- Facebook Open Graph -->
+<%
+  meta [:property => "og:title", :content => "Sobre nosotros"]
+  meta [:property => "og:description", :content => "Conoce quiénes están detrás de esta iniciativa y el porqué."]
+  meta [:property => "og:type", :content => "website"]
+  meta [:property => "og:url", :content => "#{request.original_url}"]
+  meta [:property => "og:image", :content => image_url('logotype.png')]
+  meta [:property => "fb:page_id", :content => "365738726854197"]
+  meta [:property => "fb:admins", :content => "100001120638005"]
+%>
+<!-- /Facebook Open Graph -->
+
+<!-- Twiter cards -->
+<%
+  meta [:property => "twitter:card", :content => "summary"]
+  meta [:property => "twitter:url", :content => "#{request.original_url}"]
+  meta [:property => "twitter:title", :content => "Sobre nosotros"]
+  meta [:property => "twitter:description", :content => "En StartupPlace te guiamos en la busca del éxito como emprendedor. Atrévete a innovar e iniciar la aventura como emprendedor."]
+  meta [:property => "twitter:image", :content => image_url('logotype.png')]
+%>
+<!-- /Twiter cards -->
 
 <!-- start: Page Title -->
 <div id="page-title">
