--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,4 @@
-  <% meta :title => "Dashboard" %>
+<% meta :title => "Dashboard", :robots => "noindex" %>
+<% meta :robots => "nofollow" %>
 
- <h1>Dashboard</h1>
+<h1>Dashboard</h1>
