change account routes

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -69,7 +69,7 @@
 								</span> 
 								<span>
 									<i class="mini-ico-user"></i>
-									Por <%= link_to news.user.username, account_path(news.user) %>
+									Por <%= link_to news.user.username, account_path(news.user.username) %>
 								</span> 
 							</div>
 						</div>
