--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,4 +1,4 @@
  <% meta :title => "Account page", :robots => "noindex" %>
 
-<h1>Account#show</h1>
-<p>Find me in app/views/account/show.html.erb</p>
+<h1>Account</h1>
+<p><%= @user.username %></p>
