let's begin with front style to dashboard

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -1,5 +1,5 @@
 /*
- * This is a manifest file that'll be compiled into sudo.css, which will include all the files
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
  * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
@@ -8,10 +8,9 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
- *= require sudo/news
+ *= require dashboard/bootstrap.min
+ *= require dashboard/bootstrap-reset
+ *= require font-awesome
+ *= require dashboard/style
+ *= require dashboard/style-responsive
  */
-
-body {
-	margin: 1px;
-}
