--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -2,11 +2,15 @@
 <html>
 	<head>
 		<%= render 'shared/meta_tags' %>
-	  <%= stylesheet_link_tag "sudo", media: "all", "data-turbolinks-track" => true %>
-	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	  <%= stylesheet_link_tag "dashboard", media: "all", "data-turbolinks-track" => true %>
+	  <%= javascript_include_tag "dashboard", "data-turbolinks-track" => true %>
 	  <%= favicon_link_tag 'ico/favicon.ico', type: 'image/x-icon' %>
 		<%= csrf_meta_tags %>
-		<%= render 'layouts/shim' %>
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
+		<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+			<script src="https://raw.github.com/scottjehl/Respond/master/dest/respond.min.js"></script>
+		<![endif]-->
 	</head>
 	<body>
 		<div id="account">
